--- a/META.yml
+++ b/META.yml
@@ -23,11 +23,13 @@ requires:
   Any::Moose: 0
   AnyEvent: 0
   AnyEvent::HTTP: 0
+  Digest::SHA: 0
   Filter::Util::Call: 0
   HTTP::Request: 0
+  Time::HiRes: 0
   URI::Escape: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/miyagawa/AnyEvent-ReverseHTTP.git
-version: 0.02
+version: 0.03
